--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -347,7 +347,7 @@
     <string name="pt_show_all_find">Display all Discovery</string>
     <string name="ps_show_all_find">Display the selected origin\'s Discovery if closed</string>
     <string name="update_toc">Update chapters</string>
-    <string name="txt_toc_rule">Txt Chapters Rule</string>
+    <string name="txt_toc_rule">Txt Catalog Rule</string>
     <string name="select_section_export">Choose some chapters to be exported</string>
     <string name="set_charset">Text encoding</string>
     <string name="swap_sort">Ascending/Descending order</string>
@@ -924,8 +924,8 @@
     <string name="open_sys_dir_picker_error">打开系统文件夹选择器出错,自动打开应用文件夹选择器</string>
     <string name="open_sys_doc_picker_error">打开系统文件选择器出错,自动打开应用文件选择器</string>
     <string name="expand_text_menu">展开文本选择菜单</string>
-    <string name="book_tree_uri_t">书籍保存位置</string>
-    <string name="book_tree_uri_s">从其它应用打开的书籍保存位置</string>
+    <string name="book_tree_uri_t">Book Save Location</string>
+    <string name="book_tree_uri_s">Save location for books opened from other apps</string>
     <string name="select_book_folder">选择保存书籍的文件夹</string>
     <string name="user_agent">User agent</string>
     <string name="bg_alpha">Background alpha</string>
@@ -953,16 +953,16 @@
     <string name="chapter_change_source">Single chapter source switching</string>
     <string name="book_change_source">Change the source of the whole book</string>
     <string name="sort_by_time">Sort by time</string>
-    <string name="enable_record">开启记录</string>
+    <string name="enable_record">Enable record</string>
     <string name="copy_all">Copy all</string>
     <string name="auto_complete">Automatic completion</string>
     <string name="sort_by_size">Sort by size</string>
     <string name="welcome_style">Launch interface style</string>
-    <string name="welcome_style_summary">启动界面图片和是否显示文字等</string>
+    <string name="welcome_style_summary">Startup screen image and whether to display text, etc.</string>
     <string name="show_welcome_text">Display text</string>
     <string name="welcome_text">阅读|享受美好时光</string>
     <string name="custom_welcome">Customize the welcome page</string>
-    <string name="custom_welcome_summary">是否使用自定义欢迎页</string>
+    <string name="custom_welcome_summary">Whether to use a customized welcome page</string>
     <string name="show_icon">Show icon</string>
     <string name="show_default_book_icon">Show default book icon</string>
     <string name="cache_export">Cache / Export</string>
@@ -1003,17 +1003,17 @@
     <string name="error_decode_bitmap">Fail to decode bitmap</string>
     <string name="error_image_url_empty">Image url is empty, check replacement rules</string>
     <string name="variable_comment">变量说明(variableComment)</string>
-    <string name="remote_book">远程书籍</string>
-    <string name="reading_time_sort">阅读时长排序</string>
-    <string name="last_read_time_sort">阅读时间排序</string>
-    <string name="reading_time_tag">阅读时长:</string>
-    <string name="last_read_time_tag">最后阅读时间:</string>
-    <string name="page_touch_slop_title">滑动翻页阈值</string>
-    <string name="page_touch_slop_dialog_title">滑动翻页阈值（0 = 系统默认值）</string>
-    <string name="page_touch_slop_summary">滑动多长距离才会触发滑动翻页（系统默认值 %s px）</string>
-    <string name="check_selected_interval">选中所选区间</string>
-    <string name="show_add_to_shelf_alert_title">返回时提示放入书架</string>
-    <string name="show_add_to_shelf_alert_summary">阅读未放入书架的书籍在返回时提示放入书架</string>
+    <string name="remote_book">Remote book</string>
+    <string name="reading_time_sort">Sort by reading duration</string>
+    <string name="last_read_time_sort">Sort by read time</string>
+    <string name="reading_time_tag">Reading time:</string>
+    <string name="last_read_time_tag">Last read time:</string>
+    <string name="page_touch_slop_title">Sliding Page Threshold</string>
+    <string name="page_touch_slop_dialog_title">Sliding page turn threshold (0 = system default)</string>
+    <string name="page_touch_slop_summary">How far to slide to trigger a page slide (system default %s px)</string>
+    <string name="check_selected_interval">Select zones</string>
+    <string name="show_add_to_shelf_alert_title">Prompt to add to bookshelf when return</string>
+    <string name="show_add_to_shelf_alert_summary">Prompt to add to bookshelf when return from reading books that are not on the bookshelf</string>
     <string name="review">Review</string>
     <string name="rule_avatar">段评发布者头像（avatarRule）</string>
     <string name="rule_review_url">段评URL（reviewUrl）</string>
@@ -1071,69 +1071,69 @@
     <string name="c_blacklist">黑名单(contentBlacklist)</string>
     <string name="confirm">Confirm</string>
     <string name="jump_to_another_app">Jump to another app</string>
-    <string name="clear_webview_data">清除 WebView 数据</string>
-    <string name="clear_webview_data_summary">清除内置浏览器所有数据</string>
+    <string name="clear_webview_data">Clear WebView Data</string>
+    <string name="clear_webview_data_summary">Clear all data in WebView</string>
     <string name="source_tab_list">List</string>
     <string name="dict_rule">Dict rule</string>
     <string name="config_dict_rule">Config dict rule</string>
     <string name="create">Create</string>
     <string name="url_rule">url规则(urlRule)</string>
     <string name="show_rule">显示规则(showRule)</string>
-    <string name="config_txt_toc_rule">配置 TXT 目录规则</string>
+    <string name="config_txt_toc_rule">Configure txt catalog rules</string>
     <string name="import_dict_rule">Import dict rule</string>
     <string name="keep_group">Keep group</string>
-    <string name="server_config">服务器配置</string>
+    <string name="server_config">Server Configuration</string>
     <string name="sure_upload">Remote webDav url exists, Continue?</string>
     <string name="unsupport_archivefile_entry">Cannot find supported files in archive</string>
-    <string name="no_books_dir">没有设置书籍保存位置!</string>
-    <string name="delete_alert">删除提醒</string>
+    <string name="no_books_dir">There is no book save location set!</string>
+    <string name="delete_alert">Delete Alert</string>
     <string name="no_book_found_bookshelf">No book found in bookshelf, import again ?</string>
     <string name="archive_not_found">Can not find archive selected, continue to download ?</string>
-    <string name="privacy_policy">用户隐私与协议</string>
-    <string name="agree">同意</string>
-    <string name="refuse">拒绝</string>
-    <string name="file_manage">文件管理</string>
-    <string name="file_manage_summary">管理私有文件夹的文件</string>
-    <string name="create_folder">创建文件夹</string>
-    <string name="allow_drop_down_refresh">允许下拉刷新</string>
-    <string name="text_underline">文字下划线</string>
-    <string name="select_new_source">选中新增源</string>
-    <string name="select_update_source">选中更新源</string>
-    <string name="set_local_password">设置本地密码</string>
-    <string name="set_local_password_summary">本地密码用来对备份的敏感信息加密和解密,如需在不同设备之间同步,本地密码需一致.</string>
-    <string name="only_latest_backup_t">仅保留最新备份</string>
-    <string name="only_latest_backup_s">本地备份仅保留最新备份文件</string>
+    <string name="privacy_policy">User Privacy and Agreement</string>
+    <string name="agree">Agree</string>
+    <string name="refuse">Refuse</string>
+    <string name="file_manage">File management</string>
+    <string name="file_manage_summary">Managing files in the application\'s private folder</string>
+    <string name="create_folder">Create Folder</string>
+    <string name="allow_drop_down_refresh">Allow drop-down refresh</string>
+    <string name="text_underline">Text underline</string>
+    <string name="select_new_source">Select new source</string>
+    <string name="select_update_source">Select update source</string>
+    <string name="set_local_password">Setting the local password</string>
+    <string name="set_local_password_summary">The local password is used to encrypt and decrypt the sensitive information of the backup, if you need to synchronize between different devices, the local password should be the same.</string>
+    <string name="only_latest_backup_t">Keep only the latest backup</string>
+    <string name="only_latest_backup_s">Local backup keeps only the latest backup file</string>
     <string name="webdav_application_authorization_error">Fail to authorize WebDav application</string>
     <string name="respondTime">respondTime: %1$d ms</string>
     <string name="load_word_count">Load word count</string>
-    <string name="replace_exclude_scope">排除范围，选填书名或者书源 URL</string>
+    <string name="replace_exclude_scope">Exclude range, optional title or source URL</string>
     <string name="format_js_rule">格式化规则(formatJs)</string>
-    <string name="adjust_pos">调整位置</string>
+    <string name="adjust_pos">Adjustment position</string>
     <string name="error_scope_input">Please enter the correct range</string>
     <string name="custom_export">Custom Export</string>
     <string name="file_contains_number">The number of chapters contained in each file</string>
     <string name="export_chapter_index">The section index that needs to be exported</string>
-    <string name="shrink_database">压缩数据库</string>
-    <string name="shrink_database_summary">减小数据库文件的大小</string>
-    <string name="is_compress">是否压缩</string>
-    <string name="sort_desc">反序</string>
-    <string name="test">测试</string>
-    <string name="show_wait_up_count">显示等待更新数量</string>
-    <string name="exit_app">退出软件</string>
+    <string name="shrink_database">Shrink database</string>
+    <string name="shrink_database_summary">Reduce the size of the database file</string>
+    <string name="is_compress">Compressed or not</string>
+    <string name="sort_desc">Descend order</string>
+    <string name="test">Test</string>
+    <string name="show_wait_up_count">Display the number of pending updates</string>
+    <string name="exit_app">Exit</string>
     <string name="add_all_to_bookshelf">全部加入书架</string>
     <string name="page_to">页至</string>
     <string name="result_analyzed">Analyzed</string>
     <string name="bookshelf_px_4">Comprehensive</string>
-    <string name="effective_replaces">起效的替换</string>
-    <string name="export_book">导出书籍</string>
-    <string name="export_book_notification_content">正在导出(%1$s),还有%2$d本待导出</string>
-    <string name="export_md">导出(MD)</string>
-    <string name="change_source_delay">换源间隔</string>
-    <string name="open_book_info_by_click_title">点击书名打开详情</string>
-    <string name="export_wait">等待导出</string>
-    <string name="default_home_page">默认主页</string>
-    <string name="show_bookshelf_fast_scroller">显示快速滚动条</string>
-    <string name="export_all_use_book_source">导出所有书的书源</string>
-    <string name="keep_enable">保留启用状态</string>
-    <string name="preview_image_by_click">点击预览图片</string>
+    <string name="effective_replaces">Effective replacement</string>
+    <string name="export_book">Export Book</string>
+    <string name="export_book_notification_content">Exporting (%1$s), with %2$d to be exported.</string>
+    <string name="export_md">Export(MD)</string>
+    <string name="change_source_delay">Change source delay</string>
+    <string name="open_book_info_by_click_title">Click on the book title to open details</string>
+    <string name="export_wait">Waiting for export</string>
+    <string name="show_bookshelf_fast_scroller">Show quick scroll bar</string>
+    <string name="export_all_use_book_source">Export book source for all books</string>
+    <string name="keep_enable">Retain Enabled Status</string>
+    <string name="preview_image_by_click">Click to preview image</string>
+    <string name="default_home_page">Default HomePage</string>
 </resources>
