--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1138,4 +1138,6 @@
     <string name="screen_portrait_reversed">反向竖屏</string>
     <string name="del_ruby_tag">删除ruby标签</string>
     <string name="del_h_tag">删除h标签</string>
+    <string name="adjust_chapter_page">调整本章页数</string>
+    <string name="adjust_chapter_index">调整章节位置</string>
 </resources>
