--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1142,5 +1142,5 @@
     <string name="adjust_chapter_page">Adjust of chapter page</string>
     <string name="adjust_chapter_index">Adjust of chapter index</string>
     <string name="clear_webview_data_success">Cleared successfully, automatically restarts the application after 3 seconds</string>
-    <string name="volume_key_page_on_long_press">Press and hold the volume key to turn the page</string>
+    <string name="key_page_on_long_press">Press and hold the key to turn the page</string>
 </resources>
