--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -729,6 +729,8 @@
     <string name="import_old_summary">Seleccione una carpeta de respaldo heredada</string>
     <string name="enabled">Activado</string>
     <string name="disabled">Desactivado</string>
+    <string name="enabled_explore">Discovery Enabled</string>
+    <string name="disabled_explore">Discovery Disabled</string>
     <string name="starting_download">Iniciando descarga</string>
     <string name="already_in_download">Este libro ya está en la lista de descargas</string>
     <string name="click_to_open">Haga clic para abrir</string>
