--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -723,6 +723,8 @@
     <string name="import_old_summary">選擇舊版備份文件夾</string>
     <string name="enabled">已啓用</string>
     <string name="disabled">已禁用</string>
+    <string name="enabled_explore">已啟用發現</string>
+    <string name="disabled_explore">已禁用發現</string>
     <string name="text_bottom_justify">文字底部對齊</string>
     <string name="starting_download">正在啟動下載</string>
     <string name="already_in_download">該書已在下載列表</string>
